name:                opalesce
version:             0.1.0.0
synopsis:            API Server using Servant and Opaleye
description:         Please see README.md
homepage:            https://github.com/jkachmar/opalesce
license:             MIT
license-file:        LICENSE
author:              Joe Kachmar
copyright:           2016 Joe Kachmar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Config
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11 && < 0.12
                     , bytestring >= 0.10 && < 0.11
                     , lens >= 4.14 && < 5
                     , mtl >= 2.2 && < 2.3
                     , opaleye >= 0.5.1.1 && < 0.6
                     , postgresql-simple >= 0.5 && < 0.6
                     , product-profunctors >= 0.7 && < 0.8
                     , resource-pool >= 0.2 && < 0.3
                     , servant >= 0.8 && < 0.9
                     , servant-server >= 0.8 && < 0.9
                     , text >= 1.2 && < 1.3
                     , transformers >= 0.5
                     , wai >= 3.2 && < 3.3
                     , wai-extra >= 3.0 && < 3.1
                     , warp >= 3.2 && < 3.3
  other-modules:       Api.Users
                     , Models.Users
                     , Queries.Users

executable opalesce
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , opalesce
                     , wai >= 3.2 && < 3.3
                     , wai-extra >= 3.0 && < 3.1
                     , warp >= 3.2 && < 3.3

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , opalesce
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/jkachmar/opalesce
